--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -47,18 +47,18 @@ http {
     proxy_set_header Host $http_host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-    upstream n9e.portal {
-        server 127.0.0.1:8022;
+    upstream n9e.monapi {
+        server 127.0.0.1:5800;
         keepalive 10;
     }
 
     upstream n9e.index {
-        server 127.0.0.1:8030;
+        server 127.0.0.1:5830;
         keepalive 10;
     }
 
     upstream n9e.transfer {
-        server 127.0.0.1:8040;
+        server 127.0.0.1:5810;
         keepalive 10;
     }
 
@@ -76,7 +76,7 @@ http {
         }
 
         location /api/portal {
-            proxy_pass http://n9e.portal;
+            proxy_pass http://n9e.monapi;
         }
 
         location /api/index {
