--- a/control
+++ b/control
@@ -11,24 +11,18 @@ usage()
 
 start_all()
 {
-	# http: 8022
+	# http: 5800
 	test -x n9e-monapi && start monapi
-	# http: 8030 ; rpc: 8031
-	test -x n9e-index && start index
-	# http: 8036 ; rpc: 8037
-	test -x n9e-tsdb && start tsdb
-	# http: 8040 ; rpc: 8041
+	# http: 5810 ; rpc: 5811
 	test -x n9e-transfer && start transfer
-	# http: 8032
+	# http: 5820 ; rpc: 5821
+	test -x n9e-tsdb && start tsdb
+	# http: 5830 ; rpc: 5831
+	test -x n9e-index && start index
+	# http: 5840
 	test -x n9e-judge && start judge
-	# http: 2188
-	test -x n9e-syscollector && start syscollector
-	# http: 2189
-	test -x n9e-logcollector && start logcollector
-	# http: 8028
-	test -x n9e-alarm && start alarm
-	# http: 8026
-	test -x n9e-sender && start sender
+	# http: 2058
+	test -x n9e-collector && start collector
 }
 
 start()
@@ -50,7 +44,6 @@ start()
 		echo "file[$binfile] not found"
 		exit 1
 	fi
-
 
 	if [ $(ps aux|grep -v grep|grep -v control|grep "$binfile" -c) -gt 0 ]; then
 		echo "${mod} already started"
@@ -74,15 +67,12 @@ start()
 
 stop_all()
 {
-	test -x n9e-logcollector && stop logcollector
-	test -x n9e-syscollector && stop syscollector
+	test -x n9e-monapi && stop monapi
 	test -x n9e-transfer && stop transfer
 	test -x n9e-tsdb && stop tsdb
-	test -x n9e-judge && stop judge
 	test -x n9e-index && stop index
-	test -x n9e-monapi && stop monapi
-	test -x n9e-alarm && stop alarm
-	test -x n9e-sender && stop sender
+	test -x n9e-judge && stop judge
+	test -x n9e-collector && stop collector
 }
 
 stop()
@@ -153,15 +143,12 @@ build()
 {
 	mod=$1
 	if [ "x${mod}" = "x" ]; then
-		build_one logcollector
-		build_one syscollector
-		build_one tsdb
+		build_one monapi
+		build_one transfer
 		build_one index
 		build_one judge
-		build_one transfer
-		build_one monapi
-		build_one alarm
-		build_one sender
+		build_one collector
+		build_one tsdb
 		return
 	fi
 
@@ -183,18 +170,13 @@ reload()
 pack()
 {
 	v=$(date +%Y-%m-%d-%H-%M-%S)
-	tar zcvf n9e-$v.tar.gz control \
-	plugin \
-	supervisord.d \
-	n9e-logcollector etc/logcollector.yml \
-	n9e-syscollector etc/syscollector.yml \
+	tar zcvf n9e-$v.tar.gz control sql plugin pub etc/log etc/port etc/service etc/nginx.conf etc/mysql.yml \
+	n9e-collector etc/collector.yml \
 	n9e-tsdb etc/tsdb.yml \
 	n9e-index etc/index.yml \
 	n9e-judge etc/judge.yml \
 	n9e-transfer etc/transfer.yml \
-	n9e-monapi etc/monapi.yml \
-	n9e-alarm etc/alarm.yml \
-	n9e-sender etc/sender.yml
+	n9e-monapi etc/monapi.yml
 }
 
 case "$1" in
