--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,8 +1,7 @@
-user root;
+user nginx;
 
 worker_processes auto;
 worker_cpu_affinity auto;
-worker_rlimit_nofile 204800;
 
 error_log /var/log/nginx/error.log;
 pid /run/nginx.pid;
@@ -64,7 +63,6 @@ http {
 
     server {
         listen       80 default_server;
-        listen       [::]:80 default_server;
         server_name  _;
         root         /usr/share/nginx/html;
 
