--- a/etc/collector.yml
+++ b/etc/collector.yml
@@ -1,22 +1,16 @@
-ntpServers: []
-
 # use shell if specify is blank
-endpoint:
+identity:
   specify: ""
   shell: /usr/sbin/ifconfig `/usr/sbin/route|grep '^default'|awk '{print $NF}'`|grep inet|awk '{print $2}'|head -n 1
-
 logger:
   dir: logs/collector
   level: WARNING
   keepHours: 2
-
-# timeout in ms
-# interval in second
-transfer:
+sys:
+  # timeout in ms
+  # interval in second
   timeout: 1000
   interval: 20
-
-collector:
   syncCollect: true
   # in second
   syncInterval: 10
@@ -28,16 +22,15 @@ collector:
   mountPoint: []
   mountIgnorePrefix:
     - /var/lib
-
-ignoreMetrics:
-  - cpu.core.idle
-  - cpu.core.util
-  - cpu.core.sys
-  - cpu.core.user
-  - cpu.core.nice
-  - cpu.core.guest
-  - cpu.core.irq
-  - cpu.core.softirq
-  - cpu.core.iowait
-  - cpu.core.steal
-
+ 
+  ignoreMetrics:
+    - cpu.core.idle
+    - cpu.core.util
+    - cpu.core.sys
+    - cpu.core.user
+    - cpu.core.nice
+    - cpu.core.guest
+    - cpu.core.irq
+    - cpu.core.softirq
+    - cpu.core.iowait
+    - cpu.core.steal
