change tsdb conf

--- a/etc/judge.yml
+++ b/etc/judge.yml
@@ -1,4 +1,3 @@
-# alias transfer
 query:
   connTimeout: 1000
   callTimeout: 2000
@@ -8,10 +7,10 @@ redis:
   addrs: 
     - 127.0.0.1:6379
   pass: ""
-  timeout:
-    conn: 500
-    read: 3000
-    write: 3000
+  # timeout:
+  #   conn: 500
+  #   read: 3000
+  #   write: 3000
 
 identity:
   specify: ""
