--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,6 @@
     "dll": "fetk run dll",
     "lint": "fetk run lint"
   },
-  "entry": {
-    "index": "./src/index.jsx"
-  },
   "dependencies": {
     "@d3-charts/ts-graph": "~0.1.2",
     "@hot-loader/react-dom": "^16.8.6",
@@ -48,6 +45,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@types/lodash": "^4.14.149",
+    "@types/query-string": "^5.1.0",
+    "@types/react-router-dom": "^5.1.3",
     "babel-eslint": "^10.0.2",
     "babel-plugin-import": "^1.12.0",
     "eslint": "^5.3.0",
@@ -55,6 +55,6 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "fetk": "~0.1.1"
+    "fetk": "^0.2.4"
   }
 }
