--- a/web/package.json
+++ b/web/package.json
@@ -45,8 +45,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.149",
+    "@types/pubsub-js": "^1.5.18",
     "@types/query-string": "^5.1.0",
+    "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "babel-eslint": "^10.0.2",
     "babel-plugin-import": "^1.12.0",
